# AutonomousMobileRobots

Lab1/: CMakeLists.txt  package.xml
lab1/src/cc_variable/: CMakeLists.txt  PID.cpp  package.xml
lab1/src/cc_variable/launch/: ttb_pid.launch.py
lab1/src/cc_variable/src/: PID.cpp  ttb_pid_node.cpp
lab1/src/joy/: CMakeLists.txt  README  package.xml  ttb_joy.cpp
lab1/src/joy/launch/: ttb_joy.launch.py
lab1/src/joy/src/: ttb_joy.cpp
lab1/src/state_machine/: CMakeLists.txt  README  package.xml
lab1/src/state_machine/launch/: state_machine.launch.py
lab1/src/state_machine/src/: state_machine_node.cpp
lab1/src/wander/: CMakeLists.txt  README  package.xml
lab1/src/wander/launch/: wander.launch.py
lab1/src/wander/src/: ir_distance_node.cpp  wander_node.cpp
lab1/src/wander_cc/: CMakeLists.txt  package.xml
lab1/src/wander_cc/launch/: wander_cc.launch.py
lab1/src/wander_cc/src/: wander_node.cpp
lab1/src/wonder/: CMakeLists.txt  package.xml
lab2/: .gitignore
lab2/lib/include/: DPID.h
lab2/lib/src/: DPID.cpp
lab2/src/follow_circle/: CMakeLists.txt  package.xml
lab2/src/go_to_goal/: CMakeLists.txt  package.xml
lab2/src/go_to_goal/launch/: go_to_goal.py
lab2/src/go_to_goal/src/: go_to_goal_node.cpp
lab2/src/goto_multiple_points/: CMakeLists.txt  package.xml
lab2/src/goto_multiple_points/src/: goto_multiple_points_node.cpp
lab2/src/joy/: CMakeLists.txt  package.xml
lab2/src/joy/src/: ttb_joy.cpp
lab2/src/state_machine/: CMakeLists.txt
lab2/src/state_machine/launch/: state_machine.launch.py
lab2/src/state_machine/src/: state_machine_node.cpp
lab2/src/wander/: CMakeLists.txt
lab2/src/wander/src/: ir_distance_node.cpp  wander_node.cpp
